Settings for gh-pages deployment

--- a/angular.json
+++ b/angular.json
@@ -58,8 +58,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
+                  "maximumWarning": "20kb",
+                  "maximumError": "100kb"
                 }
               ]
             }
@@ -124,6 +124,10 @@
               "devServerTarget": "calc:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
