--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "~11.2.6",
+    "angular-google-charts": "^2.0.1",
     "ngx-material-tools": "^0.1.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
