--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,12 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "calc",
+      "i18n": {
+        "sourceLocale": "en-US",
+        "locales": {
+          "he": "src/locale/messages.he.xlf"
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -22,6 +28,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "localize": ["he"],
             "aot": true,
             "assets": [
               "src/favicon.ico",
