Adding real estate investment page

--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/style/calc-theme.scss",
               "src/style/styles.scss",
-              "src/style/inputs.scss"
+              "src/style/inputs.scss",
+              "src/style/pages.scss"
             ],
             "scripts": []
           },
