again trying to fix vercel rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
     "rewrites": [
         {
             "source": "/finance",
-            "destination": "/finance/en-US/index.html"
+            "destination": "/en-US/index.html"
         },
         {
             "source": "/finance/:lang",
-            "destination": "/finance/:lang/index.html"
+            "destination": "/:lang/index.html"
         },
         {
             "source": "/finance/:lang/:page*",
-            "destination": "/finance/:lang/index.html"
+            "destination": "/:lang/index.html"
         }
     ]
 }
