--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
     "trailingSlash": false,
     "rewrites": [
         {
+            "source": "/finance/:asset*.css",
+            "destination": "/he/:asset*.css"
+        },
+        {
             "source": "/finance",
             "destination": "/he/index.html"
         },
