trying to fix fabicon with rewrite

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
         {
             "source": "/:asset*",
             "destination": "/he/:asset*"
+        },
+        {
+            "source": "/fabicon.svg",
+            "destination": "/he/fabicon.svg"
         }
     ]
 }
